# skyline

./: .gitignore  .pre-commit-config.yaml  README.md
hardware/: README.md
hardware/arduino/: arduino.ino
racecar_inference/: .gitignore  README.md  setup.py
racecar_inference/racecar_inference/: __init__.py  broker.py  modules.py
racecar_inference/racecar_inference/jetcam/: camera.py  csi_camera.py  usb_camera.py  utils.py
racecar_inference/racecar_inference/jetracer/: nvidia_racecar.py
racecar_inference/racecar_inference/proto/: README.md  messages.py  protocol.proto  protocol_pb2.py
racecar_inference/scripts/: calibrate_esc.py  drive.py  log.py  tune_pid.py
racecar_inference/scripts/configs/: car.yaml  control.yaml  pid.yaml  speed_filter.yaml  speed_sensor.yaml
trajectory_optimization/: README.md  pyproject.toml  train_proto.py
trajectory_optimization/data/models/: fazer_mk2.yaml
trajectory_optimization/data/tracks/: saison11_speed.dxf  saison11_urban.dxf  vivatech_2022.dxf  vivatech_2023.dxf  vivatech_2023_mini.dxf  vivatech_2023_mini_2.dxf  vivatech_2023_obstacles.dxf  vivatech_2023_obstacles_2.dxf
trajectory_optimization/notebooks/: 20230505_load_track.ipynb  20230510_write_track_to_txt.ipynb  20230512_steering_distrib.ipynb  20230518_max_accel.ipynb
trajectory_optimization/scripts/: blender.py  gen_traj.py  pid.py  run_model.py  train.py
trajectory_optimization/scripts/configs/: train.yaml
trajectory_optimization/scripts/configs/env/: base_env.yaml  longitudinal.yaml  longitudinal_slow.yaml
trajectory_optimization/scripts/configs/env/car_config/: base_car.yaml  slow.yaml
trajectory_optimization/scripts/configs/experiment/: example_experiment.yaml  fast_fixed_speed.yaml  fine_tune_fixed_speed.yaml  fine_tune_longi_continuity_cost.yaml  fine_tune_longitudinal.yaml  fixed_speed.yaml  fixed_speed_no_obstacles.yaml  longitudinal.yaml  longitudinal_fast.yaml  longitudinal_fast_af.yaml  longitudinal_fast_no_obstacles.yaml  longitudinal_to_deploy.yaml
trajectory_optimization/scripts/configs/wrappers/: base_wrappers.yaml
trajectory_optimization/trajectory_optimization/: __init__.py  bicycle_model.py  car_env.py  car_racing.py  model.yaml  track.py  utils.py  wrappers.py
trajectory_prediction/: pyproject.toml  train.py
trajectory_prediction/configs/: train.yaml
trajectory_prediction/configs/dataset/: frames_trajectories.yaml
trajectory_prediction/configs/model/: r18.yaml
trajectory_prediction/notebooks/: 20230424_camera_calibration.ipynb  20230521_dev_trajectory_ds.ipynb  20230530_vp_calib.ipynb
trajectory_prediction/scripts/: process_images.py  train.py
trajectory_prediction/scripts/configs/: train.yaml
trajectory_prediction/scripts/configs/augmentations/: augs.yaml  augs_plus.yaml
trajectory_prediction/scripts/configs/dataset/: frames_steering.yaml  frames_trajectories.yaml
trajectory_prediction/scripts/configs/experiment/: 3_to_4.yaml  4_to_5.yaml  longi.yaml  longi_augs.yaml
trajectory_prediction/scripts/configs/model/: r18.yaml  r18_longi.yaml
trajectory_prediction/trajectory_prediction/: camera.py  datasets.py  models.py  utils.py  viz.py
