[tool.poetry]
name = "trajectory-prediction"
version = "0.1.0"
description = ""
authors = ["Armandpl <adpl33@gmail.com>"]
readme = "README.md"
packages = [{include = "trajectory_prediction"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
