[tool.poetry]
name = "trajectory-prediction"
version = "0.1.0"
description = ""
authors = ["Armandpl <adpl33@gmail.com>"]
readme = "README.md"
packages = [{include = "trajectory_prediction"}]

[tool.poetry.dependencies]
python = "^3.8"
hydra-core = "^1.3.2"
pre-commit = "^3.3.1"
wandb = "^0.15.2"
accelerate = "^0.19.0"
tqdm = "^4.65.0"
torch = "^2.0.1"
torchvision = "^0.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
