[tool.poetry]
name = "trajectory-prediction"
version = "0.1.0"
description = ""
authors = ["Armandpl <adpl33@gmail.com>"]
readme = "README.md"
packages = [{include = "trajectory_prediction"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
hydra-core = "^1.3.2"
pre-commit = "^3.3.1"
wandb = "^0.15.2"
accelerate = "^0.19.0"
tqdm = "^4.65.0"
torch = "^2.0.1"
torchvision = "^0.15.2"
jupyter = "^1.0.0"
ipykernel = "^6.23.1"
kornia = "^0.6.12"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
opencv-python = "^4.7.0.72"
moviepy = "^1.0.3"
imageio = "^2.29.0"
joblib = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
